--- a/gqlserver/package.json
+++ b/gqlserver/package.json
@@ -8,8 +8,12 @@
     "start": "nodemon -e js,json,graphql"
   },
   "dependencies": {
-    "apollo-server": "^2.21.0",
+    "apollo-server-express": "2.21.0",
+    "axios": "0.21.1",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
     "graphql": "^15.5.0",
+    "mongodb": "3.6.3",
     "nodemon": "^2.0.7"
   }
 }
